# codesloop

./: .gitignore  CMakeLists.txt  LICENSE.BSD  gen_cscope  gen_tags
cmake/: DefaultCompilerFlags.cmake  DetectGcc.cmake  DetectIgep.cmake  FindDlopen.cmake  FindMySQL.cmake  FindOPSSL.cmake  FindPthread.cmake  FindStdCXX.cmake  FindWsock32.cmake  FindZLib.cmake
comm/: CMakeLists.txt  addr.hh  autofd.cc  autofd.hh  bfd.hh  channel.hh  channel_factory.hh  client.hh  connid.hh  endpoint.hh  evmgr.cc  evmgr.hh  fdhandler.hh  handler.hh  handler_old0.hh  listener.hh  msg.hh  msghandler.hh  network_stream.hh  network_stream_impl.hh  tcp_client.cc  tcp_client.hh  tcp_listener.cc  tcp_listener.hh  tcp_lstnr.cc  tcp_lstnr.hh  tcp_lstnr_old0.cc  tcp_lstnr_old0.hh  tcp_stream.cc  tcp_stream.hh  tcp_stream_impl.hh  tcp_stream_source.cc  tcp_stream_source.hh  tcp_stream_target.hh  udp_auth.hh  udp_listener.cc  udp_listener.hh
comm/_refactor1/: bfd.cc  channel.hh  csl_comm.hh  evmgr.cc  exc.cc  exc.hh  handler_factory.hh  tcp_client_old0.cc  tcp_client_old0.hh  tcp_lstnr.cc  tcp_stream.hh  tcp_stream_source.hh  tcp_stream_target.hh
common/: CMakeLists.txt  allocator.hh  arch.cc  arch.hh  archiver.cc  archiver.hh  archiver_impl.hh  atomic.hh  auto_close.hh  basic_streams.cc  binry.cc  binry.hh  bithacks.cc  bithacks.hh  bitmap512.cc  bitmap512.hh  bufmgr.cc  bufmgr.hh  cexc.cc  cexc.hh  common.c  common.h  common_static_checks.cc  common_unix.h  common_win32.h  csl_common.hh  dbc.hh  dbl.cc  dbl.hh  exc.cc  exc.hh  excbase.hh  file_logger.cc  file_logger.hh  hash.hh  hlprs.hh  inpvec.hh  int64.cc  int64.hh  ksbuf.hh  (+60 more)
common/_refactor1/: CMakeLists.txt  circbuf.hh  dbl.cc  hash.cc  hlprs.cc  inpvec_impl.hh  int64.cc  logger.cc  pbuf.cc  pbuf.hh  preallocated_array.hh  preallocated_array_impl.hh  pvlist.hh  queue.hh  queue_impl.hh  stream.cc  stream_buffer_impl.hh  stream_impl.hh  strobj.hh  tbuf_impl.hh  test_timer.c  test_timer.h  ustr.cc  xdrbuf.hh  ydr_archiver.cc  ydr_archiver.hh  ydr_util.cc
db/: CMakeLists.txt  exc.cc  exc.hh
db/slt3/: _shared_impl.hh  conn.cc  conn.hh  csl_slt3.hh  query.cc  tran.cc  var.hh
db/slt3/_refactor1/: _shared_impl.cc  obj.cc  obj.hh  query.hh  reg.cc  reg.hh  sql.cc  sql.hh  tran.hh  var.cc
example/: CMakeLists.txt  ex_thread1.cc  ex_thrpool.cc  ex_zfile1.cc
example/_refactor1/: ex_sql1.cc  ex_sql2.cc  ex_zfile2.cc
nthread/: CMakeLists.txt  event.hh  event_impl_pthread.cc  locked_stream.hh  locked_stream_impl.hh  mutex.cc  mutex_impl_pthread.cc  mutex_impl_windows.cc  pevent.hh  pevent_impl_windows.cc  thread.cc  thread.hh  thread_impl_pthread.cc  thrpool.cc  thrpool.hh  waitable_stream.hh  waitable_stream_impl.hh
nthread/_refactor1/: csl_nthread.hh  event.cc  event_impl_windows.cc  exc.cc  exc.hh  mutex.hh  pevent.cc  pevent_impl_pthread.cc  thread_impl_windows.cc  waitable_stream.hh
rpc/: cli_trans.cc  cli_trans.hh  cli_trans_tcp.cc  cli_trans_tcp.hh  csrgen.hh  csrparser.rl  handle.cc  iface.cc  iface.hh  srv_trans.hh  srv_trans_tcp.cc  srv_trans_tcp.hh  stub_base.cc  stub_client.cc  stub_client.hh  stub_header.cc  stub_header.hh  stub_server.cc  stub_server.hh
rpc/_refactor1/: cli_trans_tcp.cc  cli_trans_tcp.hh  client_info.hh  csrgen.hh  csrparser.hh  exc.cc  exc.hh  handle.hh  iface.cc  iface.hh  srv_trans.cc  srv_trans.hh  stub_base.hh  stub_client.cc
sched/: cfg.cc  cfg.hh  csl_sched.hh  db.cc  exc.cc  item.cc  item_state.cc  peer.cc  remote_peer.cc  remote_peer.hh  route.cc  route.hh  schedule.cc
sched/_refactor1/: data.cc  data.hh  db.hh  exc.hh  head.cc  head.hh  item.hh  item_state.hh  peer.hh  schedule.hh
sec/: crypt_buf.cc  crypt_buf.hh  crypt_pkt.cc  crypt_pkt.hh  csl_sec.h  ecdh_key.cc  ecdh_key.hh  exc.cc  exc.hh  sha1_conv.cc
sec/_refactor1/: bignum.cc  bignum.hh  csl_sec.hh  gen_rand.cc
test/: CMakeLists.txt
test/comm/: CMakeLists.txt  feas_tcp_listener.cc  feas_udp_listener.cc  func_autofd.cc  perf_addr.cc  t__tcp_client_old0.cc  t__tcp_input_stream.cc  t__tcp_lstnr_old0.cc  t__tcp_output_stream.cc  t__tcp_stream_source.cc  t__udp_data_server.cc  t__udp_hello_server.cc
test/comm/_refactor1/: t__bfd.cc  t__evmgr.cc  t__mt_udp.cc  t__tcp_client.cc  t__tcp_client_old0.cc  t__tcp_input_stream.cc  t__tcp_libev.cc  t__tcp_lstnr.cc  t__tcp_stream_target.cc  t__udp_auth_client.cc  t__udp_auth_server.cc  t__udp_data_client.cc  t__udp_hello_client.cc
test/common/: CMakeLists.txt  feas_0x.cc  feas_allocator.cc  feas_archiver.cc  feas_atomic.cc  feas_bits.cc  feas_ksbuf.cc  feas_kspin.cc  feas_lock.cc  feas_logger.cc  func_bithacks.cc  func_bitmap512.cc  func_exc.cc  func_simpstr.cc  func_stpodary.cc  func_str.cc  perf_bithacks.cc  perf_bitmap512.cc  perf_bufmgr.cc  perf_simpstr.cc  perf_stpodary.cc  perf_stpudary.cc  perf_str.cc  t__binry.cc  t__circbuf.cc  t__dbl.cc  t__input_stream.cc  t__int64.cc  t__limited_work_buffer.cc  t__mpool.cc  t__obj.cc  t__preallocated_array.cc  t__queue.cc  t__serial.cc  t__str.cc  t__stream.cc  t__stream_buffer.cc  t__stream_part.cc  t__ustr.cc  t__xdrbuf.cc  (+3 more)
test/common/_refactor1/: CMakeLists.txt  t__binry.cc  t__dbl.cc  t__inpvec.cc  t__int64.cc  t__logger.cc  t__output_stream.cc  t__pbuf.cc  t__preallocated_array.cc  t__pvlist.cc  t__serial.cc  t__ydr_util.cc
test/db/: CMakeLists.txt  t__syntax.cc  t__syntax_cxx_sql.cc
test/db/slt3/: t__reg.cc  t__sqlite.cc  t__tran.cc  t__var.cc
test/db/slt3/_refactor1/: t__conn.cc  t__query.cc  t__query_mem.cc  t__sql_helper.cc  t__var_mem.cc
test/nthread/: t__mutex.cc  t__pt_mutex.cc
test/nthread/_refactor1/: t__event.cc  t__pevent.cc  t__thread.cc  t__thrpool.cc
test/rpc/: exp1.txt  hello_cli_main.cc
test/rpc/_refactor1/: hello_srv_main.cc
test/sched/: t__peer.cc  t__schedule.cc
test/sched/_refactor1/: CMakeLists.txt  t__iface.cc  t__item.cc
test/sec/: t__bignum.cc  t__crypt_pkt.cc  t__ecdh_key.cc  t__sha1.c
test/sec/_refactor1/: t__crypt_buf.cc  t__derive_ec_params.c  t__umac.cc
